--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Style Guide</title>
+    <link rel="stylesheet" href="index.css">
+</head>
 <body>
-  <h1>Khamil Totharam</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <header>
+        <h1>My Website Style Guide</h1>
+    </header>
+    <nav class="navigation">
+        <ul>
+            <li>
+                <a href="#colors">Colors</a>
+            </li>
+            <li>
+                <a href="#fonts">Fonts</a>
+            </li>
+            <li>
+                <a href="#text-styles">Text Styles</a>
+            </li>
+        </ul>
+    </nav>
 </body>
-
 </html>
