--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Style Guide</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <header>
+        <h1>My Website Style Guide</h1>
+    </header>
+    <nav class="navigation">
+        <ul>
+            <li>
+                <a href="#colors">Colors</a>
+            </li>
+            <li>
+                <a href="#fonts">Fonts</a>
+            </li>
+            <li>
+                <a href="#text-styles">Text Styles</a>
+            </li>
+        </ul>
+    </nav>
+</body>
+</html>
