--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <h1>My Website Style Guide</h1>
     </header>
-    <nav class="navigation">
-        <ul>
+    <nav>
+        <ul class="navigation">
             <li>
                 <a href="#colors">Colors</a>
             </li>
@@ -23,5 +23,20 @@
             </li>
         </ul>
     </nav>
+    <div class="container">
+        <h2>Colors</h2>
+        <section class="color-container">
+            <div>
+                <p class="color-label">Cool Blue</p>
+                <p class="color-hex">#2d5dcc</p>
+            </div>
+        </section>
+    </div>
+    <div class="container">
+        <h2>Fonts</h2>
+    </div>
+    <div class="container">
+        <h2>Text Styles</h2>
+    </div>
 </body>
 </html>
