--- a/index.html
+++ b/index.html
@@ -26,9 +26,21 @@
     <div class="container">
         <h2>Colors</h2>
         <section class="color-container">
-            <div>
+            <div class="color-panel cool-blue">
                 <p class="color-label">Cool Blue</p>
                 <p class="color-hex">#2d5dcc</p>
+            </div>
+            <div class="color-panel pink">
+                <p class="color-label">Pink</p>
+                <p class="color-hex">#d957d9</p>
+            </div>
+            <div class="color-panel mint-green">
+                <p class="color-label">Mint Green</p>
+                <p class="color-hex">#4fe0b0</p>
+            </div>
+            <div class="color-panel beige">
+                <p class="color-label">Beige</p>
+                <p class="color-hex">#efd9ca</p>
             </div>
         </section>
     </div>
