--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Style Guide</title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -24,7 +27,7 @@
         </ul>
     </nav>
     <div class="container">
-        <h2>Colors</h2>
+        <h2 id="colors">Colors</h2>
         <section class="color-container">
             <div class="color-panel cool-blue">
                 <p class="color-label">Cool Blue</p>
@@ -43,12 +46,32 @@
                 <p class="color-hex">#efd9ca</p>
             </div>
         </section>
+    </div> 
+    <div class="container">
+        <h2 id="fonts">Fonts</h2>
+        <section class="font-container">
+            <div class="font-panel">
+                <p class="font-label source-code-pro">Source Code Pro</p>
+                <p class="regular source-code-pro">The quick brown fox jumps over the lazy dog.</p>
+                <p class="bold source-code-pro">The quick brown fox jumps over the lazy dog.</p>
+                <p class="italic source-code-pro">The quick brown fox jumps over the lazy dog.</p>
+            </div>
+            <div class="font-panel">
+                <p class="font-label nunito-sans">Source Code Pro</p>
+                <p class="regular nunito-sans">The quick brown fox jumps over the lazy dog.</p>
+                <p class="bold nunito-sans">The quick brown fox jumps over the lazy dog.</p>
+                <p class="italic nunito-sans">The quick brown fox jumps over the lazy dog.</p>
+            </div>
+            <div class="font-panel">
+                <p class="font-label poppins">Source Code Pro</p>
+                <p class="regular poppins">The quick brown fox jumps over the lazy dog.</p>
+                <p class="bold poppins">The quick brown fox jumps over the lazy dog.</p>
+                <p class="italic poppins">The quick brown fox jumps over the lazy dog.</p>
+            </div>
+        </section>
     </div>
     <div class="container">
-        <h2>Fonts</h2>
-    </div>
-    <div class="container">
-        <h2>Text Styles</h2>
+        <h2 id="text-styles">Text Styles</h2>
     </div>
 </body>
 </html>
