--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                 <p class="italic source-code-pro">The quick brown fox jumps over the lazy dog.</p>
             </div>
             <div class="font-panel">
-                <p class="font-label nunito-sans">Source Code Pro</p>
+                <p class="font-label nunito-sans">Nunito Sans</p>
                 <p class="regular nunito-sans">The quick brown fox jumps over the lazy dog.</p>
                 <p class="bold nunito-sans">The quick brown fox jumps over the lazy dog.</p>
                 <p class="italic nunito-sans">The quick brown fox jumps over the lazy dog.</p>
             </div>
             <div class="font-panel">
-                <p class="font-label poppins">Source Code Pro</p>
+                <p class="font-label poppins">Poppins</p>
                 <p class="regular poppins">The quick brown fox jumps over the lazy dog.</p>
                 <p class="bold poppins">The quick brown fox jumps over the lazy dog.</p>
                 <p class="italic poppins">The quick brown fox jumps over the lazy dog.</p>
@@ -72,6 +72,25 @@
     </div>
     <div class="container">
         <h2 id="text-styles">Text Styles</h2>
+        <section class="text-container">
+            <div class="text-panel">
+                <h1>H1: Main page heading</h1>
+                <ul>
+                    <li>
+                        ::marker
+                        "Font-weight: 700 (bold)"
+                    </li>
+                    <li>
+                        ::marker
+                        "Font-size: 26px"
+                    </li>
+                    <li>
+                        ::marker
+                        "Font-family: Nunito Sans"
+                    </li>
+                </ul>
+            </div>
+        </section>
     </div>
 </body>
 </html>
