--- a/index.html
+++ b/index.html
@@ -76,18 +76,25 @@
             <div class="text-panel">
                 <h1>H1: Main page heading</h1>
                 <ul>
-                    <li>
-                        ::marker
-                        "Font-weight: 700 (bold)"
-                    </li>
-                    <li>
-                        ::marker
-                        "Font-size: 26px"
-                    </li>
-                    <li>
-                        ::marker
-                        "Font-family: Nunito Sans"
-                    </li>
+                    <li>"Font-weight: 700 (bold)"</li>
+                    <li>"Font-size: 26px"</li>
+                    <li>"Font-family: Nunito Sans"</li>
+            <div class="text-panel">
+                <h2>H2: Subheading</h2>
+                <ul>
+                    <li>Font-weight: 500</li>
+                    <li>Font-size: 18px</li>
+                    <li>Font-family: Poppins</li>
+                </ul>
+                </div>
+                <div class="text-panel">
+                <p>P: Paragraph text</p>
+                <ul>
+                    <li>Font-weight: 400 (regular)</li>
+                    <li>Font-size: 14px</li>
+                    <li>Font-family: Poppins</li>
+                </ul>
+                </div>
                 </ul>
             </div>
         </section>
